--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "downloader-backend",
-  "version": "1.0.0",
-  "description": "Backend server for a video downloader feature.",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "author": "Your Name",
-  "license": "MIT",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
-    "uuid": "^9.0.1",
-    "ws": "^8.14.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+    "name": "advanced-video-downloader-local",
+    "version": "1.0.0",
+    "description": "A high-functionality video downloader with simple and expert modes for local development.",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js"
+    },
+    "author": "Your Name",
+    "license": "MIT",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.18.2",
+        "express-rate-limit": "^7.1.5",
+        "helmet": "^7.1.0",
+        "uuid": "^9.0.1",
+        "ws": "^8.14.2"
+    },
+    "engines": {
+        "node": ">=16.0.0"
+    }
 }
