--- a/render.yaml
+++ b/render.yaml
@@ -1,39 +1,22 @@
-# render.yaml - Blueprint Specification
-# This file is used to define the services for the Render platform.
-
 services:
-  # Web Service for the Node.js backend
+  # バックエンドAPIサーバー
   - type: web
-    name: downloader-backend # The name of your service
-    env: node # Specify the environment as Node.js
-    plan: free # Use the free instance type
-    region: oregon # The region to deploy the service in
-    
-    # Specify the Node.js and Python versions
-    # This ensures both runtimes are available in the build environment.
+    name: advanced-downloader-backend
+    env: node
+    plan: free # 無料プラン。必要に応じて変更
+    # ビルド時にnpm installとyt-dlpのインストールを実行
+    buildCommand: "npm install && pip install -U yt-dlp"
+    # 起動コマンド
+    startCommand: "node server.js"
+    healthCheckPath: /
     envVars:
       - key: NODE_VERSION
-        value: 18.17.1
+        value: 18 # 使用するNode.jsのバージョンを指定
       - key: PYTHON_VERSION
-        value: 3.11.4
-      # Application-specific environment variables
+        value: 3.10 # 使用するPythonのバージョンを指定
       - key: FILE_LIFETIME_MIN
         value: 15
       - key: MAX_FILE_SIZE
-        value: "750m"
+        value: 750m # Freeプランのディスク容量に注意
       - key: PROCESS_TIMEOUT_SEC
-        value: 900
-        
-    # The build command for your service.
-    # It only installs Node.js dependencies.
-    buildCommand: "npm install"
-    
-    # ★★★ A command to run BEFORE the start command. ★★★
-    # We use this to reliably install yt-dlp in the runtime environment.
-    preDeployCommand: "pip install --upgrade pip && pip install -U yt-dlp"
-
-    # The command to start your service.
-    startCommand: "node server.js"
-    
-    # A health check path that Render uses to determine if the service is live.
-    healthCheckPath: /
+        value: 900 # 15分
