--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,26 @@
 services:
   - type: web
+    # サービス名
     name: downloader-backend
-    env: node
+    # ランタイムとしてDockerを指定
+    env: docker
+    # Dockerfileへのパス（リポジトリのルートからの相対パス）
+    dockerfilePath: ./Dockerfile
+    # 無料プランを指定
     plan: free
+    # リージョン
     region: oregon
-    buildCommand: "npm install && pip install -U yt-dlp"
-    startCommand: "node server.js"
+    # ヘルスチェック用のパス
     healthCheckPath: /
+    # 環境変数
     envVars:
-      - key: NODE_VERSION
-        value: 18
-      - key: PYTHON_VERSION
-        value: 3.10
-      - key: FILE_LIFETIME_MIN
-        value: 15
+      - key: FRONTEND_URL
+        # ★重要★ RenderのダッシュボードのSecretsから設定することを推奨
+        # value: https://YOUR_USERNAME.github.io
+        fromService:
+          type: web # この書き方だと別のサービスから値を持ってこれるが、直接書くかSecretsを使うのが一般的
+          name: my-frontend-service # この部分は説明用なので、実際は直接値を書くか、sync: falseにする
       - key: MAX_FILE_SIZE
-        value: 750m
+        value: 400m
       - key: PROCESS_TIMEOUT_SEC
         value: 900
